Fix Remaining Styling issues

--- a/Torrent Scrapper Web/Pages/Index.cshtml
+++ b/Torrent Scrapper Web/Pages/Index.cshtml
@@ -50,16 +50,49 @@
             value=" @if (!string.IsNullOrEmpty(Model.SearchKeywords)){@Model.SearchKeywords}"
             required/>
         <button
+            onclick="showLoading()"
             type="submit"
             class="text-white absolute right-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             Search
         </button>
     </div>
 </div>
+<div
+    id="divLoadingIndicator"
+    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3  2xl:grid-cols-4 gap-6 py-4 mt-8 px-2 md:px-6 h-full hidden">
+    @for(var index=0;index<10; index++)
+    {
+        <div
+            class="bg-white dark:bg-gray-800 dark:text-gray-200 p-4 drop-shadow rounded flex flex-col justify-between">
+            <div role="status" class="space-y-8 animate-pulse md:space-y-0 md:space-x-8 md:flex md:items-center">
+                <div class="flex items-center justify-center w-full h-48 bg-gray-300 rounded sm:w-96 dark:bg-gray-700">
+                    <svg
+                        class="w-12 h-12 text-gray-200"
+                        xmlns="http://www.w3.org/2000/svg"
+                        aria-hidden="true"
+                        fill="currentColor"
+                        viewBox="0 0 640 512">
+                        <path d="M480 80C480 35.82 515.8 0 560 0C604.2 0 640 35.82 640 80C640 124.2 604.2 160 560 160C515.8 160 480 124.2 480 80zM0 456.1C0 445.6 2.964 435.3 8.551 426.4L225.3 81.01C231.9 70.42 243.5 64 256 64C268.5 64 280.1 70.42 286.8 81.01L412.7 281.7L460.9 202.7C464.1 196.1 472.2 192 480 192C487.8 192 495 196.1 499.1 202.7L631.1 419.1C636.9 428.6 640 439.7 640 450.9C640 484.6 612.6 512 578.9 512H55.91C25.03 512 .0006 486.1 .0006 456.1L0 456.1z"/>
+                    </svg>
+                </div>
+                <div class="w-full">
+                    <div class="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-48 mb-4"></div>
+                    <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[480px] mb-2.5"></div>
+                    <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 mb-2.5"></div>
+                    <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[440px] mb-2.5"></div>
+                    <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[460px] mb-2.5"></div>
+                    <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[360px]"></div>
+                </div>
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+    }
+</div>
 @if (Model.TorrentData != null && Model.PageCount > 0)
 {
     <div
-        class="grid grid-cols-1 md:grid-cols-3 gap-6 py-4 mt-8 px-2 md:px-6 h-full">
+        id="divContentGrid"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-6 py-4 mt-8 px-2 md:px-6 h-full">
         @foreach (var torrent in Model.TorrentData)
         {
             if (torrent == null)
@@ -217,11 +250,11 @@
 }
 else if (Model.TorrentData != null && Model.PageCount == 0)
 {
-    <div class="text-center dark:text-white mt-4">No results found!</div>
+    <div id="divNoResults" class="text-center dark:text-white mt-4">No results found!</div>
 }
 @if (Model.TorrentData != null)
 {
-    <nav aria-label="Page navigation" class="flex justify-center mt-auto">
+    <nav id="divPageNav" aria-label="Page navigation" class="flex justify-center mt-auto">
         <div class="flex flex-row gap-x-2">
             @for (var pageNo = 1; pageNo <= Model.PageCount; pageNo++)
             {
@@ -245,4 +278,16 @@ else if (Model.TorrentData != null && Model.PageCount == 0)
 </form>
 <div class="mt-auto text-center py-2 text-gray-200">Made by <a class="text-blue-500 text-semibold" href="https://github.com/Foxtrot47">Foxtrot47</a> with ASP.NET Core</div>
 </body>
+<script>
+    const showLoading = () => {
+        document.getElementById("divLoadingIndicator").classList.remove("hidden");
+        document.getElementById("divContentGrid").style.visibility = "hidden";
+        
+        if (document.getElementById("divNoResults") != null)
+            document.getElementById("divNoResults").style.visibility = "hidden";
+            
+        if (document.getElementById("divPageNav") != null)
+            document.getElementById("divPageNav").style.visibility = "hidden";
+    }
+</script>
 </html>
